--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "wikistack",
   "version": "1.0.0",
+  "scripts": {
+    "test": "mocha"
+  },
   "dependencies": {
     "bluebird": "^3.4.6",
     "body-parser": "^1.15.0",
@@ -12,5 +15,9 @@
     "pg": "^4.5.3",
     "pg-hstore": "^2.3.2",
     "sequelize": "^3.21.0"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^3.3.0"
   }
 }
